get user from jwt token, add validation to dto objects, add user service, add security definition

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "oauth_endpoint_settings": {
+    "base_url": "http://192.168.56.101:8080/auth/realms/master/protocol/openid-connect",
+    "authorize": "auth",
+    "token": "token",
+    "refresh": "token"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
