add keycloak admin api

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,28 @@
 {
   "oauth_endpoint_settings": {
-    "base_url": "http://192.168.56.101:8080/auth/realms/master/protocol/openid-connect",
-    "authorize": "auth",
-    "token": "token",
-    "refresh": "token"
+    "base_url": "http://192.168.46.101:8080/auth/realms/master/protocol/openid-connect",
+    "authorize_endpoint": "auth",
+    "token_endpoint": "token",
+    "refresh_endpoint": "token"
+  },
+  "keycloak_settings": {
+    "base_url": "http://192.168.46.101:8080/auth",
+    "realm": "master",
+    "client_id": "admin-cli",
+    "client_secret": "",
+    "username": "admin",
+    "password": "chord.io"
+  },
+  "mongo_connection_settings": {
+    "hostname": "172.28.1.2",
+    "port": 27017,
+    "username": "midoriiro",
+    "password": "chord.io",
+    "database": "chordio"
+  },
+  "jwt": {
+    "authority": "http://192.168.46.101:8080/auth/realms/master",
+    "audience": "master-realm"
   },
   "Logging": {
     "LogLevel": {
