add authentication controller

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,8 +8,8 @@
   "keycloak_settings": {
     "base_url": "http://192.168.46.101:8080/auth",
     "realm": "master",
-    "client_id": "admin-cli",
-    "client_secret": "",
+    "client_id": "chord.io",
+    "client_secret": "2a452491-08fb-4790-a1d0-6032672a0750",
     "username": "admin",
     "password": "chord.io"
   },
